2003-07-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp (icc): Update to grok ICC 7.1's output.
	* m4/depend.m4 (_AM_DEPENDENCIES): Check dependency generation
	in a subdirectory, and with many dependencies.  This
	catches more failures of depcomp.
	Reports from Ralf Wildenhues and Akim Demaille.

2003-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_traces): Check the expected
	number of arguments of each traced macro.
	* tests/conff2.test: New files.
	* tests/Makefile.am (TESTS): Add conff2.test.
	Report from Paolo Bonzini.

2003-06-27  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>  (tiny change)

	* lib/am/configure.am (maintainer-clean): Remove
	$(top_srcdir)/autom4te.cache, not autom4te.cache.

2003-06-15  Jens Elkner  <elkner@imsgroup.de>  (tiny change)

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Fix sed commands to work with
	POSIXLY_CORRECT=1.

2003-06-13  Paul Eggert  <eggert@twinsun.com>

	* lib/install.sh (dsttmp, rmtmp): Do not use '#' in file names;
	it's not guaranteed by POSIX and it doesn't work on OpenVMS.
	Bug reported by Bernard Giroud in:
	http://mail.gnu.org/archive/html/autoconf-patches/2003-06/msg00013.html

2003-06-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (check_gnu_standards): Use no-installman and
	no-installinfo's locations.
	(process_option_list): Fill %options with locations.
	(check_cygnus) Fill $options{'no-installinfo'} and
	$options{'no-dependencies'} with $cygnus_mode, so that it
	remains a Location.
	* tests/gnuwarn2.test: New file.
	* tests/Makefile.am (TESTS): Add gnuwarn2.test.

2003-06-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (process_option_list): Record the location
	of ansi2knr's definition.
	(handle_compile): Use it.
	* tests/ansi3.test: Make sure the location appears correctly.
	Update to use set -e.
	* tests/ansi3b.test: New file.
	* tests/Makefile.am (TESTS): Add ansi3b.test.

	* tests/alpha.test: Really run $MAKE.  Augment to test