@@ -7,8 +7,6 @@ acinclude.test \
 aclibobj.test \
 aclocal.test \
 aclocal2.test \
-aclocal.test \
-aclocal2.test \
 aclocal3.test \
 aclocal4.test \
 acoutnoq.test \
@@ -302,7 +300,6 @@ output2.test \
 output3.test \
 output4.test \
 output5.test \
-package.test \
 parse.test \
 percent.test \
 percent2.test \
@@ -371,7 +368,6 @@ spell.test \
 spell2.test \
 spell3.test \
 spelling.test \
-stamph.test \
 stamph2.test \
 stdlib.test \
 strip.test \
