@@ -1,5 +1,9 @@
 2003-07-04  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/stamph.test, tests/package.test: Delete.
+	* tests/Makefile.am (TESTS): Remove them, and do not list
+	aclocal.test and aclocal2.test twice.
+
 	* lib/depcomp (icc): Update to grok ICC 7.1's output.
 	* m4/depend.m4 (_AM_DEPENDENCIES): Check dependency generation
 	in a subdirectory, and with many dependencies.  This
